--- a/build.gradle
+++ b/build.gradle
@@ -12,20 +12,23 @@ plugins {
 
     // Apply the application plugin to add support for building an application
     id 'application'
+
+    // jacoco code coverage
+    id 'jacoco'
 }
 
 repositories {
-    // Use jcenter for resolving your dependencies.
-    // You can declare any Maven/Ivy/file repository here.
-    jcenter()
+    mavenCentral()
 }
 
 dependencies {
-    // This dependency is found on compile classpath of this component and consumers.
-    implementation 'com.google.guava:guava:27.0.1-jre'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.3.1'
+    testImplementation 'org.junit.jupiter:junit-jupiter-params:5.3.1'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.3.1'
+}
 
-    // Use JUnit test framework
-    testImplementation 'junit:junit:4.12'
+test {
+    useJUnitPlatform()
 }
 
 // Define the main class for the application
