creating a test for signal name decorator

--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,9 @@ plugins {
 
     // jacoco code coverage
     id 'jacoco'
+
+    // intellij!
+    id 'idea'
 }
 
 repositories {
@@ -24,6 +27,7 @@ repositories {
 dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.3.1'
     testImplementation 'org.junit.jupiter:junit-jupiter-params:5.3.1'
+    testImplementation 'org.mockito:mockito-core:2.+'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.3.1'
 }
 
